--- a/less/desktop.less
+++ b/less/desktop.less
@@ -95,7 +95,7 @@
       margin-bottom: 20px;
       padding: 15px 10px;
       p{
-        font-size: .5em;
+        font-size: 1em;
         margin-bottom: 10px;
       }
     }
@@ -104,7 +104,7 @@
       margin-left: 10px;
     }
     .right{
-      grid-column-end: 8;
+      grid-column-end: 9;
       margin-right: 10px;                           
     }
   }
