--- a/less/laptop.less
+++ b/less/laptop.less
@@ -1,7 +1,7 @@
 /*
 *
 *
-*  laptops from 768 to 1084px
+*  Laptops from 768 to 1084px
 *
 */
 
@@ -185,7 +185,7 @@
       grid-column-start: 1;
       grid-column-end: 11;
       p{
-        font-size: .5em;
+        font-size: 1em;
         margin-bottom: 10px;
       }
     }
@@ -195,5 +195,8 @@
     grid-column: span 9;
   }
 
+  .drawer-content{
+    width: calc(~"94% - 300px");
+  }
 
 }
