--- a/less/content.less
+++ b/less/content.less
@@ -438,13 +438,15 @@ img{
 }
 
 #section-4-5{
-    
+    .row-five{
+        grid-template-columns: repeat(4, 1fr);
+    }
     .fat-thirds{
-        padding-right: 30px;
+        
         grid-column: span 1;
         img{
             width: 250px;
-            height: 250px;
+            
         } 
     }
             
@@ -452,7 +454,38 @@ img{
 }
 
 
+#section-4-6{
+    .row-five{
+        grid-template-columns: repeat(4, 1fr);
+        .thirds{
+            p{
 
+            }
+        }
+    }
+    .one-half{
+        grid-column: span 3;
+    }
+}
+
+
+#section-4-8{
+    .row-seven{
+        grid-column-gap: 40px;
+        display: grid;
+    }
+    .half{
+        display: flex;
+        flex-direction: column;
+        p, img{  
+            margin-top: 20px;
+        }
+        .title{
+            padding-right: 0;
+            min-height: 60px;
+        }
+    }
+}
 
 
 #section-4-9{
@@ -475,23 +508,6 @@ img{
     }
 }
 
-#section-4-8{
-    .row-seven{
-        grid-column-gap: 40px;
-        display: grid;
-    }
-    .half{
-        display: flex;
-        flex-direction: column;
-        p, img{  
-            margin-top: 20px;
-        }
-        .title{
-            padding-right: 0;
-            min-height: 40px;
-        }
-    }
-}
 
 
 #section-5-3{
@@ -535,11 +551,18 @@ img{
     }
 }
 #section-5-6{
-    .title, img{
-        margin-bottom: 20px;
+    .row-twelve .fourths{
+        display: grid;
+        grid-template-rows: minmax(60px, min-content) max-content 1fr;
+        grid-row-gap: 20px;
     }
 }
 
+#section-5-7{
+    .title{
+        margin-bottom: 20px;
+    }
+}
 
 #section-5-9{
     .half{
@@ -784,4 +807,52 @@ img{
 }
 #menu-list{
     display: block;
+}
+
+
+.hamburger{
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    display: block;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    span{
+        display: block;
+        height: 4px;
+        width: 100%;
+        background: @nav-dk;
+        left: 0;
+        position: absolute;
+        transition: all .25s ease-in-out;
+        opacity: 1;
+        &:nth-child(1){
+            top: 2px;
+        }
+        &:nth-child(2){
+            top: 11px;
+        }
+        &:nth-child(3){
+            top: 20px;
+        }
+        &.hamburger__label{
+            display: none;
+        }
+    }
+    &.open{
+        span{
+            &:nth-child(1){
+                top: 12px;
+                transform: rotate(135deg);
+            }
+            &:nth-child(2){
+                opacity: 0;
+            }
+            &:nth-child(3){
+                top: 12px;
+                transform: rotate(-135deg);
+            }
+        }
+    }
 }
