--- a/less/desktop.less
+++ b/less/desktop.less
@@ -91,7 +91,7 @@
   .overlay{
     grid-column: span 9;
     .left, .right{
-      margin-top: 10px;
+      margin-top: 30px;
       margin-bottom: 20px;
       padding: 15px 10px;
       p{
@@ -101,11 +101,11 @@
     }
     .left{
       grid-column-start: 1;
-      margin-left: 10px;
+      margin-left: 30px;
     }
     .right{
-      grid-column-end: 9;
-      margin-right: 10px;                           
+      grid-column-end: 10;
+      margin-right: 30px;                           
     }
   }
 
@@ -141,11 +141,6 @@
       }
     }
   }
-  #section-2-4{
-      p{
-        grid-column: span 7;
-      }
-    }
   #section-3-1 .thirds .content{
     margin-right: 10px;
   }
@@ -181,13 +176,21 @@
     }
   }
 
-  #section-4-5 .fat-thirds{
-    padding-right: 10px;
+  #section-4-5 {
+    .row-five{
+      grid-template-columns: repeat(3, 1fr);
+    }
+    .fat-thirds{
+      padding-right: 10px;
+    }
   }
 
   #section-4-8{
     .row-seven{
       grid-column-gap: 10px;
+    }
+    .half .title{
+      min-height: 40px;
     }
   }
 
@@ -212,6 +215,9 @@
     }
   }
 
+  #section-5-6 .row-twelve .fourths{
+    grid-template-rows: minmax(40px, min-content) max-content 1fr;
+  }
 
   #section-5-8{
     p{
@@ -228,6 +234,13 @@
       margin-bottom: 0;
     }
   }
+
+#section-5-11{
+  p.title{
+    margin-bottom: 20px;
+  }
+}
+
   #section-5-13{
     .full-row{
       grid-column: span 9;
