styling nav toggle

--- a/less/nav.less
+++ b/less/nav.less
@@ -112,7 +112,7 @@ nav{
     top: 10px;
     span{
         display: block;
-        height: 4px;
+        height: 3px;
         width: 100%;
         background: @nav-dk;
         left: 0;
@@ -120,13 +120,13 @@ nav{
         transition: all .25s ease-in-out;
         opacity: 1;
         &:nth-child(1){
-            top: 2px;
+            top: 3px;
         }
         &:nth-child(2){
             top: 11px;
         }
         &:nth-child(3){
-            top: 20px;
+            top: 19px;
         }
         &.hamburger__label{
             display: none;
@@ -147,4 +147,9 @@ nav{
             }
         }
     }
+}
+
+
+.navbar{
+    display: none;
 }
