resizing images and tablet

--- a/less/mobile.less
+++ b/less/mobile.less
@@ -1,3 +1,26 @@
+/*
+*
+*
+*  mobile from 320 to 540px
+*
+*/
 @media all and (max-width: 540px){
+  //typography
+ #section-1 h1{
+  font-size: 3em;
+  }
+  h4{
+    font-size: 1.75em;
+  }
+
+  .row-twelve{
   
+    .fourths{
+      grid-column: span 8;
+    }
+  }
+  .cta a{
+    padding: 10px 18px 7px 20px;
+    font-size: 11px;
+  }
 }
