--- a/styles/main.css
+++ b/styles/main.css
@@ -1745,6 +1745,61 @@ a {
 *
 */
 @media all and (max-width: 768px) {
+  #section-1 h1 {
+    font-size: 3.5em;
+    line-height: 1em;
+  }
+  h2 {
+    font-size: 3em;
+  }
+  h2.super.tall {
+    font-size: 3.5em;
+  }
+  h3 {
+    font-size: 2.8em;
+  }
+  h4 {
+    font-size: 2em;
+  }
+  h5 {
+    font-size: 1em;
+  }
+  h6,
+  h6.small {
+    font-size: 1.4em;
+  }
+  p {
+    font-size: .8em;
+  }
+  #section-1-2 h6 {
+    font-size: 1.75em;
+  }
+  .overlay .left p,
+  .overlay .right p {
+    font-size: .8em;
+  }
+  .word-art .left,
+  .word-art .right,
+  .word-art .middle {
+    font-size: 1.125rm;
+  }
+  .thirds .title {
+    font-size: 1.125em;
+  }
+  .thirds .title.large {
+    font-size: 1.25em;
+  }
+  .thirds .desc {
+    font-size: 1.25em;
+  }
+  .cross-through {
+    font-size: 1.4em;
+    background-position: -20px 40%;
+  }
+  div.first {
+    font-size: .8em;
+    width: 100px;
+  }
   header {
     z-index: 20;
   }
@@ -1800,8 +1855,81 @@ a {
   }
   #mainArea main section {
     grid-template-columns: 20px repeat(7, 1fr) 20px;
+    padding-top: 45px;
+    padding-bottom: 45px;
   }
   .drawer-content {
     width: 94%;
+  }
+  .overlay {
+    margin-right: 20px;
+  }
+  .row,
+  .row-full,
+  .row-five,
+  .row-seven,
+  .row-twelve {
+    margin-right: 20px;
+  }
+  .row.collapse {
+    grid-template-columns: 1fr;
+  }
+  .row.collapse .thirds {
+    grid-column: span 1;
+  }
+  .row.collapse .thirds h5 {
+    margin-bottom: 10px;
+  }
+  .row.cs {
+    grid-template-columns: 75px repeat(5, 1fr);
+  }
+  #section-2-4 p {
+    grid-column: span 6;
+  }
+  .tt-row .role,
+  .tt-row .message {
+    font-size: .8em;
+  }
+  .tt-row .role.titles,
+  .tt-row .message.titles {
+    font-size: 1em;
+  }
+  .row-lined:before {
+    width: 94%;
+  }
+  #section-4-6 .row-five.empty-cell {
+    grid-template-columns: 1fr 1fr;
+  }
+  #section-4-9 .row-twelve .half {
+    grid-column: span 9;
+  }
+  #section-5-11 .row-twelve .fourths {
+    grid-template-rows: 70px -webkit-max-content 1fr;
+    grid-template-rows: 70px max-content 1fr;
+    display: grid;
+  }
+  #section-5-11 .row-twelve .fourths .title {
+    padding-bottom: 0;
+  }
+}
+/*
+*
+*
+*  mobile from 320 to 540px
+*
+*/
+@media all and (max-width: 540px) {
+  #section-1 h1 {
+    font-size: 3em;
+  }
+  h4 {
+    font-size: 1.75em;
+  }
+  .row-twelve .fourths {
+    grid-column: span 8;
+  }
+  .cta a {
+    padding: 10px 18px 7px 20px;
+    font-size: 11px;
   }
 }
