--- a/less/laptop.less
+++ b/less/laptop.less
@@ -9,14 +9,17 @@
   //typography
   h3{
    font-size: 3.5em; 
+   line-height: 1em;
   }
 
   h4{
     font-size: 2.25em;
     grid-column: span 9;
+    line-height: 1em;
   }
   h5{
     font-size: 1.125em;
+    line-height: 1em;
   }
 
   //grid
