--- a/less/mobile.less
+++ b/less/mobile.less
@@ -9,8 +9,12 @@
  #section-1 h1{
   font-size: 3em;
   }
+  h2{
+    font-size: 2.5em;
+  }
   h4{
     font-size: 1.75em;
+    margin-right: 0;
   }
 
   .row-twelve{
@@ -22,5 +26,111 @@
   .cta a{
     padding: 10px 18px 7px 20px;
     font-size: 11px;
+  }
+  .long-bow{
+    width: 150px;
+  }
+  .row.headers{
+    grid-template-columns: 1fr;
+    .thirds{
+      grid-template-columns: 1fr;
+      .title{
+        line-height: 1em;
+        margin-top: 20px;
+      }
+    }
+  }
+  .collapse
+  {
+    h5{
+      margin-top: 30px;
+    }
+  }
+  
+  #section-4-3{
+    .row .half{
+      grid-column: span 6;
+      p{
+        margin-top: 10px;
+      }
+    }
+  }
+  .row-fluid .middle{
+    width: 100%;
+  }
+
+  .donts {
+    grid-column: span 5;
+  }
+
+  #section-4-6 .one-half{
+    grid-column: span 6;
+    img{
+      margin-bottom: 10px;
+    }
+  }
+  .badge{
+    font-size: .6em;
+  }
+
+  #section-4-5, #section-4-6, #section-4-7, #section-5-4 { 
+    .row-five{
+      grid-template-columns: 1fr;
+    }
+  }
+
+  #section-4-6 {
+    .row-five.empty-cell{
+      grid-template-columns: 1fr;
+      .thirds{
+        grid-template-rows: max-content max-content;
+      }
+      
+      p{
+        margin-right: 0;
+        margin-top: 0;
+      }
+    }
+  }
+  #section-4-8{
+    .row-seven{
+      grid-template-columns: 1fr;
+      .half .title{
+        min-height: auto;
+        margin-top: 10px;
+      }
+    }
+  }
+  #section-5-1{
+    .row{
+      grid-template-columns: 1fr;
+      .thirds{
+        margin-bottom: 30px;
+      }
+    }
+  }
+
+  #section-5-3{
+    .half{
+      grid-template-columns: 1fr;
+    }
+    .subs{
+      grid-template-columns: 1fr;
+    }
+    .row{
+      .thirds{
+        grid-column: span 9;
+      }
+    }
+  }
+
+  #section-5-4{
+    .thirds{
+      grid-template-rows: max-content 1fr;
+      .title{
+        margin-bottom: 15px;
+        margin-top: 10px;
+      }
+    }
   }
 }
