--- a/less/tablet.less
+++ b/less/tablet.less
@@ -16,10 +16,12 @@
     font-size: 3em;
     &.super.tall{
       font-size: 3.5em;
+      line-height: 1em;
     }
   }
   h3 {
     font-size: 2.8em;
+    line-height: 1em;
   }
   h4 {
     font-size: 2em;
@@ -34,6 +36,9 @@
     font-size: .8em;
   }
 
+  hr{
+    grid-column-end: 10;
+  }
   #section-1-2 h6{
     font-size: 1.75em;
   }
@@ -48,7 +53,7 @@
 
   .word-art{
     .left, .right, .middle{
-      font-size: 1.125rm;
+      font-size: 1.125em;
     }
   }
 
