--- a/less/tablet.less
+++ b/less/tablet.less
@@ -178,6 +178,12 @@
     width: 94%;
   }
 
+  .direction .needs{
+    grid-column-end: 7;
+  }
+  #section-3-3 .thirds .desc{
+    padding-right: 0;
+  }
   #section-4-6 .row-five.empty-cell{
     grid-template-columns: 1fr 1fr;
   }
