--- a/less/laptop.less
+++ b/less/laptop.less
@@ -43,10 +43,7 @@
     grid-column: span 9;
     margin-right: 10px;
   }
-
-  .row-five.empty-cell{
-    grid-template-columns: repeat(2, 1fr);
-  }
+ 
 
   #mainArea main section{
     grid-template-columns: 40px repeat(7, 1fr) 40px;
@@ -105,6 +102,7 @@
     .row-five{
       grid-template-columns: repeat(3, 1fr);
       &.empty-cell{
+       grid-template-columns: repeat(2, 1fr);
         .thirds{
           grid-template-rows: 50px minmax(min-content, 100px);
         }
@@ -132,18 +130,13 @@
   
   }
 
-  #section-5-4{
-    .thirds{
-      grid-template-rows: 100px 1fr;
-    }
+  #section-5-4 .thirds{
+      grid-template-rows: 70px 1fr;
   }
 
-  #section-5-5{
-    .thirds .title{
-      font-size: 1.5em;
-    }
+  #section-5-5 .thirds .title{
+    font-size: 1.5em;
   }
-
 
   #section-5-7{
     .row-twelve     {
