--- a/less/typography.less
+++ b/less/typography.less
@@ -170,7 +170,7 @@ p {
 .thirds {
     .title{
         font-size: 20px;
-        line-height:28px;
+        line-height:1.1em;
         font-family: 'SegoeUISemiLight';
         font-weight: 300;
         &.large{
